--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@mantine/core": "^7.16.3",
+    "@mantine/form": "^7.17.0",
     "@mantine/hooks": "^7.16.3",
     "@tabler/icons-react": "^3.30.0",
+    "@tanstack/react-query": "^5.66.9",
+    "axios": "^1.7.9",
     "framer-motion": "^12.4.2",
     "motion": "^12.4.2",
     "next": "15.1.7",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
